nobase_include_HEADERS = voxi/alwaysInclude.h voxi/debug.h voxi/cvsid.h \
                         voxi/types.h \
                         voxi/util/bag.h voxi/util/bitFippling.h \
                         voxi/util/bt.h voxi/util/circularBuffer.h \
                         voxi/util/collection.h \
                         voxi/util/err.h \
                         voxi/util/file.h \
                         voxi/util/geometry.h \
                         voxi/util/hash.h \
                         voxi/util/idTable.h \
                         voxi/util/libcCompat.h \
                         voxi/util/license.h \
                         voxi/util/mem.h \
                         voxi/util/memory.h \
                         voxi/util/path.h \
                         voxi/util/shlib.h \
                         voxi/util/sock.h \
                         voxi/util/strbuf.h \
                         voxi/util/textRPC.h \
                         voxi/util/threading.h \
                         voxi/util/threadpool.h \
                         voxi/util/time.h \
                         voxi/util/vector.h \
                         voxi/util/win32_glue.h \
                         voxi/util/wordMap.h
